conformance_test/core_language_tests/positive_tests/11_variables/1101_value_variables/NegSem_1101_ValueVars_005.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:11.1, Variables should be assigned only by initialized variables
 ** @verdict  pass reject
 ***************************************************/

// The expression shall evaluate to a value, which is at least partially initialized.

module NegSem_1101_ValueVars_005 {
    type component GeneralComp {}
    
	testcase TC_NegSem_1101_ValueVars_005() runs on GeneralComp {
  		var integer v_i;
        var integer v_j := v_i + 2;    // error: v_i is uninitialized            

        setverdict(pass);
	}
    
    control {
        execute(TC_NegSem_1101_ValueVars_005());
    }
}
